More mobile changes, it's not done

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-map-tertiary/block-map-tertiary.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-map-tertiary/block-map-tertiary.html
@@ -1,11 +1,8 @@
 <div class="component-block-map-tertiary" data-bind="css: {'windowed': data.windowed}">
 	<div class="site-frame">
 		<div class="slide-wrapper">
+			<div class="solid-background"></div>
 			<div class="slides">
-				<div class="background abs-fill" data-bind="image: {
-						image: data.background,
-						state: $root.deviceState()
-					}"></div>
 
 				<!-- ko foreach: $root.slides() -->
 
