--- a/deploy/htdocs/version/src/inc/style/component/block-map-tertiary-slide/_abstract_slide.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block-map-tertiary-slide/_abstract_slide.scss
@@ -20,6 +20,12 @@
 		position: absolute;
 	}
 
+	.background {
+		background-size: cover;
+		background-position: center center;
+	}
+
+
 	@include respond-to(SMALL) {
 
 		.slide-heading {
