--- a/deploy/htdocs/version/src/inc/style/component/block-map-tertiary-slide/_slide-horizontal-with-icon.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block-map-tertiary-slide/_slide-horizontal-with-icon.scss
@@ -70,6 +70,10 @@
 			transform: none
 		}
 
+		.track {
+			display: none;
+		}
+
 		.statistics-wrapper {
 			display: block;
 
@@ -84,10 +88,7 @@
 				}
 			}
 
-			.icon {
-				display: none;
-			}
-
+			.icon,
 			.separator {
 				display: none;
 			}
