--- a/deploy/htdocs/version/src/inc/style/component/block-map-tertiary-slide/_slide-radial-progress.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block-map-tertiary-slide/_slide-radial-progress.scss
@@ -36,4 +36,54 @@
 		display: block;
 		margin-top: $sizeGrid / 2;
 	}
+
+	@include respond-to(SMALL) {
+		.slide-heading {
+			.copy {
+				display: none;
+			}
+		}
+
+		.slide-statistics {
+			@include pos(auto, auto, auto, auto);
+			@include size(100%, auto);
+			position: relative;
+			transform: none;
+			text-align: center;
+			padding: 0 $sizeGrid * 2;
+			margin-top: $sizeGrid;
+
+			&.single-column {
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+			}
+		}
+
+		.statistic {
+			@include size(50%, auto);
+			font-size: 0;
+			margin: 0;
+			text-align: left;
+			margin-top: $sizeGrid;
+
+
+			.label {
+				width: calc(100% - #{$sizeGrid * 5});
+				display: inline-block;
+				vertical-align: middle;
+				padding: 0 0 0 $sizeGrid;
+			}
+		}
+
+		.component-percentage-loader {
+			display: inline-block;
+			vertical-align: middle;
+
+			.svg-holder {
+				@include size($sizeGrid * 5);
+			}
+		}
+
+	}
 }
