Implemented new market polygon file

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-market-map/block-market-map.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-market-map/block-market-map.html
@@ -89,8 +89,8 @@
 		name: 'market-search',
 		onComplete: $root.controller.handleMarketSearchReady.bind($root.controller),
 		options : {
-			searchLabel: data.searchLabel,
-			notFoundMessage: data.notFoundMessage
+			searchLabel: searchLabel,
+			notFoundMessage: notFoundMessage
 		}
 	} --><!-- /ko -->
 
