--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-market-map/block-market-map.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-market-map/block-market-map.html
@@ -90,6 +90,7 @@
 		onComplete: $root.controller.handleMarketSearchReady.bind($root.controller),
 		options : {
 			searchLabel: searchLabel,
+			searchPlaceholder: searchPlaceholder,
 			notFoundMessage: notFoundMessage
 		}
 	} --><!-- /ko -->
