Hide the loader by default Do not clear everything on the triangle transition

--- a/deploy/htdocs/version/src/inc/style/asset/_loader.scss
+++ b/deploy/htdocs/version/src/inc/style/asset/_loader.scss
@@ -4,6 +4,7 @@
 	position: absolute;
 	background: rgba($colorWhite, .5);
 	z-index: zindex($layout, inlineLoader);
+	display: none;
 
 	&:after {
 		@include abs-center(32px);
