Add new icon type slide

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-map-tertiary/slide/slide-vertical-graphic/slide-vertical-graphic.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-map-tertiary/slide/slide-vertical-graphic/slide-vertical-graphic.html
@@ -1,6 +1,6 @@
 <div class="map-tertiary-slide abs-fill component-slide-vertical-graphic">
 	<!-- ko if: data.slideData.background -->
-	<div class="background abs-fill" data-bind="image: {
+	<div class="background" data-bind="image: {
 			image: data.slideData.background,
 			state: $root.deviceState()
 		}"></div>
