--- a/deploy/htdocs/version/src/inc/style/component/block-map-tertiary-slide/_slide-vertical-graphic.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block-map-tertiary-slide/_slide-vertical-graphic.scss
@@ -51,11 +51,16 @@
 	@include respond-to(SMALL) {
 		display: block;
 
+		.slide-heading {
+			display: none;
+		}
+
 		.slide-statistics {
 			@include pos(auto, auto, auto, auto);
+			@include size(100%, 270px);
 			position: relative;
 			transform: none;
-			margin-top: $sizeGrid
+			margin-top: $sizeGrid;
 		}
 
 		.statistic {
