--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-map-tertiary/slide/slide-icon-progress/slide-icon-progress.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-map-tertiary/slide/slide-icon-progress/slide-icon-progress.html
@@ -1,7 +1,7 @@
-<div class="map-tertiary-slide abs-fill component-slide-radial-progress">
+<div class="map-tertiary-slide abs-fill component-slide-icon-progress">
 
 	<!-- ko if: data.slideData.background -->
-		<div class="background abs-fill" data-bind="image: {
+	<div class="background abs-fill" data-bind="image: {
 			image: data.slideData.background,
 			state: $root.deviceState()
 		}"></div>
@@ -12,18 +12,18 @@
 		<p class="copy copy-03" data-bind="html: data.slideData.paragraph"></p>
 	</header>
 
-	<div class="slide-statistics abs-center" data-bind="foreach: data.slideData.statistics, css: {'single-column': data.slideData.statistics.length <= 3}">
+	<div class="slide-statistics abs-center"
+	     data-bind="foreach: data.slideData.statistics, css: {
+	        'single-column': data.slideData.statistics.length <= 3,
+	        'multi-column': data.slideData.statistics.length > 3
+     } ">
 		<div class="statistic">
 			<div class="statistic-inner-wrapper">
-				<!-- ko component: {
-				name: 'percentage-loader',
-				onComplete: $root.controller.callbackCounter.get(),
-				options: {
-						value: $data.value,
-						borderType: $root.PercentageLoaderBorderType.DASHED
-					}
-				} --><!-- /ko -->
-				<span class="label copy copy-02 " data-bind="html: $data.label"></span>
+				<span class="icon" data-bind="icon: $data.icon"></span>
+				<span class="label copy copy-02">
+					<strong data-bind="html: $data.value"></strong>
+					<span data-bind="html: $data.label"></span>
+				</span>
 			</div>
 		</div>
 	</div>
@@ -33,4 +33,5 @@
 		      data-bind="html: $root.StringUtils.padLeft((data.index + 1).toString(), 2, '0')"></span>
 		<h3 class="heading heading-01" data-bind="html: data.slideData.heading"></h3>
 	</div>
+
 </div>
