--- a/deploy/htdocs/version/src/inc/style/component/_component.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_component.scss
@@ -126,4 +126,5 @@
 @import "block-map-tertiary-slide/slide-horizontal-with-icon";
 @import "block-map-tertiary-slide/slide-horizontal-without-icon";
 @import "block-map-tertiary-slide/slide-vertical-graphic";
+@import "block-map-tertiary-slide/slide-icon-progress";
 @import "vertical-graphic";
