--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-map-tertiary/slide/slide-horizontal-with-icon/slide-horizontal-with-icon.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-map-tertiary/slide/slide-horizontal-with-icon/slide-horizontal-with-icon.html
@@ -14,17 +14,12 @@
 	<div class="slide-statistics">
 
 		<span class="full-line">
-			<!-- ko if: $root.deviceState() > $root.DeviceState.SMALL -->
 			<svg width="100%" height="100%" class="dashed-line abs-center" preserveAspectRatio="none">
-				<line x1="0" y1="0" x2="1000" y2="0" />
+				<line x1="1" y1="1" data-bind="attr: {
+					'x2': $root.deviceState() > $root.DeviceState.SMALL ? 1000 : 1,
+					'y2': $root.deviceState() > $root.DeviceState.SMALL ? 1 : 680
+				}"/>
 			</svg>
-			<!-- /ko -->
-
-			<!-- ko if: $root.deviceState() <= $root.DeviceState.SMALL -->
-			<svg width="100%" height="100%" class="dashed-line abs-center" preserveAspectRatio="none">
-				<line x1="0" y1="0" x2="0" y2="1000" />
-			</svg>
-			<!-- /ko -->
 		</span>
 
 		<ul class="statistics-wrapper" data-bind="foreach: data.slideData.statistics">
@@ -33,7 +28,7 @@
 				<!-- ko if: $root.deviceState() > $root.DeviceState.SMALL -->
 					<span class="separator">
 						<svg width="100%" height="100%" class="dashed-line abs-center" preserveAspectRatio="none">
-							<line x1="0" y1="0" x2="0" y2="100" />
+							<line x1="1" y1="1" x2="1" y2="100" />å
 						</svg>
 					</span>
 				<!-- /ko -->
@@ -42,7 +37,7 @@
 					<!-- ko if: $root.deviceState() <= $root.DeviceState.SMALL -->
 					<span class="separator">
 						<svg width="100%" height="100%" class="dashed-line abs-center" preserveAspectRatio="none">
-							<line x1="0" y1="0" x2="100" y2="0" />
+							<line x1="1" y1="1" x2="100" y2="1" />
 						</svg>
 					</span>
 					<!-- /ko -->
