--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-map-tertiary/slide/slide-horizontal-without-icon/slide-horizontal-without-icon.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-map-tertiary/slide/slide-horizontal-without-icon/slide-horizontal-without-icon.html
@@ -21,7 +21,7 @@
 				</div>
 			</div>
 			<div class="separator">
-				<svg width="100%" height="100%" class="dashed-line abs-center" preserveAspectRatio="none">
+				<svg width="100%" height="100%" class="dashed-line" preserveAspectRatio="none">
 					<line x1="1" y1="1" data-bind="attr: {
 						'x2': $root.deviceState() > $root.DeviceState.SMALL ? 200 : 0,
 						'y2': $root.deviceState() > $root.DeviceState.SMALL ? 0 : 100
@@ -38,7 +38,7 @@
 					</div>
 					<div class="middle-statistic">
 						<div class="separator separator-top">
-							<svg width="100%" height="100%" class="dashed-line abs-center" preserveAspectRatio="none">
+							<svg width="100%" height="100%" class="dashed-line" preserveAspectRatio="none">
 								<line x1="1" y1="1" data-bind="attr: {
 									'x2': $root.deviceState() > $root.DeviceState.SMALL ? 1 : 100,
 									'y2': $root.deviceState() > $root.DeviceState.SMALL ? 100 : 1
@@ -49,7 +49,7 @@
 							<span class="label" data-bind="html: $data.label.middle"></span>
 						</span>
 						<div class="separator separator-bottom">
-							<svg width="100%" height="100%" class="dashed-line abs-center" preserveAspectRatio="none">
+							<svg width="100%" height="100%" class="dashed-line" preserveAspectRatio="none">
 								<line x1="1" y1="1" data-bind="attr: {
 									'x2': $root.deviceState() > $root.DeviceState.SMALL ? 1 : 100,
 									'y2': $root.deviceState() > $root.DeviceState.SMALL ? 100 : 1
@@ -65,7 +65,7 @@
 					</div>
 				</div>
 				<div class="separator">
-					<svg width="100%" height="100%" class="dashed-line abs-center" preserveAspectRatio="none">
+					<svg width="100%" height="100%" class="dashed-line" preserveAspectRatio="none">
 						<line x1="1" y1="1" data-bind="attr: {
 							'x2': $root.deviceState() > $root.DeviceState.SMALL ? 200 : 1,
 							'y2': $root.deviceState() > $root.DeviceState.SMALL ? 1 : 100
