--- a/deploy/htdocs/version/src/inc/style/component/block-map-tertiary-slide/_slide-horizontal-without-icon.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block-map-tertiary-slide/_slide-horizontal-without-icon.scss
@@ -88,6 +88,7 @@
 	}
 
 	.arrow {
+		@include size(10px, 20px);
 		stroke: $colorLocalMedia;
 		stroke-dasharray: 3, 3;
 		stroke-width: 1px;
@@ -141,7 +142,6 @@
 			font-size: mobile-size(2.8rem);
 		}
 
-
 		.separator-top,
 		.separator-bottom {
 			@include size($sizeGrid, 1px);
@@ -168,6 +168,9 @@
 
 		.dashed-line {
 			@include size(1px, $sizeGrid);
+			@include offset(50%, 50%);
+			transform: translate(-50%, -50%);
+			position: absolute;
 		}
 	}
 }
