Refactor the block map

--- a/deploy/htdocs/version/src/inc/style/component/_component.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_component.scss
@@ -127,4 +127,8 @@
 @import "block-map-tertiary-slide/slide-horizontal-without-icon";
 @import "block-map-tertiary-slide/slide-vertical-graphic";
 @import "block-map-tertiary-slide/slide-icon-progress";
+
+@import "block-map-slide/slide-text";
+
 @import "vertical-graphic";
+
