--- a/deploy/htdocs/version/src/inc/style/component/block/_block-map-tertiary.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-map-tertiary.scss
@@ -32,6 +32,10 @@
 		.slides {
 			@include size(100%, 455px);
 			background: transparent;
+
+			&:before {
+				display: none;
+			}
 		}
 
 		.solid-background {
