--- a/deploy/htdocs/version/src/inc/style/utility/mixin/_position.scss
+++ b/deploy/htdocs/version/src/inc/style/utility/mixin/_position.scss
@@ -58,6 +58,7 @@
  * Places an element absolute on top of the entire wrapper
  */
 @mixin coverer {
+	@include size(100%);
 	@include pos(0, 0, 0, 0);
 	position: absolute;
 }
