--- a/deploy/htdocs/version/src/inc/style/asset/_logo.scss
+++ b/deploy/htdocs/version/src/inc/style/asset/_logo.scss
@@ -67,10 +67,8 @@
 	}
 
 	@include respond-to(MEDIUM) {
-		@include size(60px, 19px);
-
 		/**
-		 * Mobile has no themes
+		 * Tablet portrait and mobile have no themes
 		 */
 		.theme-light &,
 		.theme-dark & {
@@ -83,5 +81,8 @@
 				color: #00629b;
 			}
 		}
+	}
+	@include respond-to(SMALL) {
+		@include size(60px, 19px);
 	}
 }
