--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-blog-post/block-blog-post.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-blog-post/block-blog-post.html
@@ -21,13 +21,13 @@
 			</div>
 
 			<ul class="blog-details">
-				<!-- ko if: data.time -->
+				<!-- ko if: $data.time -->
 				<li>
 					<span class="icon" data-bind="icon: 'time'"></span>
 					<!-- ko text: time --><!-- /ko -->
 				</li>
 				<!-- /ko -->
-				<!-- ko if: data.views -->
+				<!-- ko if: $data.views -->
 				<li>
 					<span class="icon" data-bind="icon: 'views'"></span>
 					<!-- ko text: views --><!-- /ko -->
