Update blog post

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-blog-post/block-blog-post.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-blog-post/block-blog-post.html
@@ -21,18 +21,14 @@
 			</div>
 
 			<ul class="blog-details">
-				<!-- ko if: $data.time -->
 				<li>
 					<span class="icon" data-bind="icon: 'time'"></span>
-					<!-- ko text: time --><!-- /ko -->
+					<!-- ko text: $data.time --><!-- /ko -->
 				</li>
-				<!-- /ko -->
-				<!-- ko if: $data.views -->
 				<li>
 					<span class="icon" data-bind="icon: 'views'"></span>
-					<!-- ko text: views --><!-- /ko -->
+					<!-- ko text: $data.views --><!-- /ko -->
 				</li>
-				<!-- /ko -->
 
 				<!-- ko foreach: social -->
 					<li>
@@ -54,8 +50,8 @@
 		</div>
 
 		<div class="description">
-			<h3 class="heading-07 heading" data-bind="html: subHeading"></h3>
-			<p class="copy-01 copy" data-bind="html: paragraph"></p>
+			<h3 class="heading-07 heading" data-bind="html: $data.subHeading"></h3>
+			<p class="copy-01 copy" data-bind="html: $data.paragraph"></p>
 		</div>
 	</div>
 </div>
