Hide the hand cursor on the logo if the current route is the landing page
ready
#275

--- a/deploy/htdocs/version/src/inc/script/app/component/header/header.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/header/header.html
@@ -3,6 +3,7 @@
 	<h1 class="logo" data-bind="
 		gaiaGoto: [Branches.CONTENT_PAGE, 'home'],
 		css: {
+			'is-disabled': dataManager.currentRoute() === dataManager.settingsModel.initDataModel.data.routes.landing,
 			'enable-solid-background': $root.enableSolidBackground()
 		}"> <!-- 'primary' or 'inverted' -->
 		<span class="icon" data-bind="icon: 'logo'"></span>
