--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-hero-main/block-hero-main.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-hero-main/block-hero-main.html
@@ -8,15 +8,16 @@
 		<div class="background-triangle"></div>
 		<div class="secondary-background-triangle"></div>
 		<div class="tertiary-background-triangle" data-bind="visible: !$data.hasStatistics()"></div>
-		<!-- ko foreach: data.slides -->
-			<div class="slide-content" >
-				<h2 class="heading heading-01" data-bind="html: $data.heading"></h2>
+		<div class="slides" data-bind="foreach: data.slides">
+			<div class="slide">
+				<div class="slide-content" >
+					<h2 class="heading heading-01" data-bind="html: $data.heading"></h2>
 
-				<!-- ko if: $data.paragraph -->
+					<!-- ko if: $data.paragraph -->
 					<p class="copy copy-01" data-bind="html: $data.paragraph"></p>
-				<!-- /ko -->
+					<!-- /ko -->
 
-				<!-- ko if: $data.link -->
+					<!-- ko if: $data.link -->
 					<!-- ko component: {
 						name: 'button/button-circle-arrow',
 						onComplete: $root.controller.callbackCounter.get(),
@@ -27,9 +28,9 @@
 							size: $root.ButtonSize.LARGE
 						}
 					} --><!-- /ko -->
-				<!-- /ko -->
-			</div>
-			<!-- ko with: $data.statistics -->
+					<!-- /ko -->
+				</div>
+				<!-- ko with: $data.statistics -->
 				<div class="statistics-wrapper">
 					<h3 class="heading heading-07" data-bind="html: $data.heading"></h3>
 					<div class="statistics" data-bind="foreach: $data.stats">
@@ -48,8 +49,9 @@
 						</div>
 					</div>
 				</div>
-			<!-- /ko -->
-		<!-- /ko -->
+				<!-- /ko -->
+			</div>
+		</div>
 	</div>
 
 	<!-- ko if: data.slides.length > 1 -->
