--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-blog-post/block-blog-post.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-blog-post/block-blog-post.html
@@ -27,7 +27,7 @@
 				</li>
 				<li>
 					<span class="icon" data-bind="icon: 'views'"></span>
-					<!-- ko text: $data.views --><!-- /ko -->
+					<!-- ko text: $root.viewCount() --><!-- /ko -->
 				</li>
 
 				<!-- ko foreach: social -->
