--- a/deploy/htdocs/version/src/inc/style/component/block/_block-filter-content.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-filter-content.scss
@@ -16,6 +16,7 @@
 		.component-block-info {
 			margin-left: 0;
 			margin-bottom: $sizeGrid * 2;
+			margin-right: 0;
 
 			.clip-mask {
 				background: $colorLightGrey;
