Changed background to match the path to purchase block
ready #334

--- a/deploy/htdocs/version/src/inc/style/component/block/_block-persona-selector.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-persona-selector.scss
@@ -140,7 +140,7 @@
 
 	.persona-button {
 		@include size(calc(100% - #{$sizeGrid}), $buttonHeight);
-		color: $colorLightGrey;
+		color: $colorBorder;
 		transition: background #{$animationDuration} #{$ease};
 		text-align: left;
 		margin-right: $sizeGrid;
